--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="abu">#535050</color>
+    <color name="label">#635C5C</color>
+    <color name="black">#1D1818</color>
 </resources>
